--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,8 @@
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
